# llm-tech-docs-rag

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: lint.yml
docs/: development.md  linting.md
src/: data_loader.py  evaluator.py  indexer.py  query_engine.py
